syntax = "proto3";
package transaction;

import "types/primitives.proto";
import "types/account.proto";

// TRANSACTION
// ================================================================================================

// Submits proven transaction to the Miden network.
message ProvenTransaction {
    // Transaction encoded using [winter_utils::Serializable] implementation for
    // [miden_objects::transaction::proven_tx::ProvenTransaction].
    bytes transaction = 1;
}

message ProvenTransactionBatch {
    // Encoded using [winter_utils::Serializable] implementation for
    // [miden_objects::transaction::proven_tx::ProvenTransaction].
    bytes encoded = 1;
}

// Represents a transaction ID.
message TransactionId {
    // The transaction ID.
    primitives.Digest id = 1;
}

// Represents a transaction summary.
message TransactionSummary {
    // A unique 32-byte identifier of a transaction.
    TransactionId transaction_id = 1;

    // The block number in which the transaction was executed.
    fixed32 block_num = 2;

    // The ID of the account affected by the transaction.
    account.AccountId account_id = 3;
}
